[package]
edition = "2021"
name = "async-rtc"
version = "0.1.0"

[dependencies]
# embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "db344c2bda55bd0352a43720788185cc4d3a420e", features = ["defmt", "nightly"] }
# embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "db344c2bda55bd0352a43720788185cc4d3a420e", features = ["defmt", "time-driver-rtc1", "gpiote", "nightly"], optional = true }
# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "db344c2bda55bd0352a43720788185cc4d3a420e", features = ["defmt", "time-driver-tim2", "nightly"], optional = true }
embassy = { version = "0.1.0", path = "../embassy/embassy", features = ["defmt", "defmt-timestamp-uptime", "time-tick-32768hz"] }
# git = "https://github.com/embassy-rs/embassy.git"
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = ["nightly", "defmt", "net", "stm32f767zi", "unstable-pac", "time-driver-any", "exti"]  }
# git = "https://github.com/embassy-rs/embassy/tree/master/embassy-stm32.git"
embassy-net = { path = "../embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "pool-16"] }
embedded-io = { version = "0.3.0", features = ["async"] }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-async = "0.1.0-alpha.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
rand_core = "0.6.3"
critical-section = "0.2.3"
embedded-storage = "0.3.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
# lto = true
